# ruck-poc

./: Dockerfile  README.rst  requirements.txt  setup.cfg  tox.ini
config/: README.rst
config/debian/bookworm/: ostree.yaml  treefile.yaml
config/debian/bookworm/ostree-image/: debos.yaml
config/debian/bookworm/overlay/adduser/etc/: adduser.conf
config/debian/bookworm/overlay/adduser/etc/default/: useradd
config/debian/bookworm/overlay/debian/etc/default/: grub
config/debian/bookworm/overlay/debian/usr/sbin/: firstboot.sh
config/debian/bookworm/overlay/firstboot/usr/sbin/: firstboot.sh
config/debian/bookworm/uefi-image/: disk.yaml  image.yaml  treefile.yaml
config/debian/trixie-image/: config.yaml
config/debian/trixie-image/partitions/: 10-efi.conf  50-root.conf
config/dummy/: config.yaml
docker/: Dockerfile
releasenotes/source/: conf.py  index.rst
ruck/: __init__.py  config.py  exceptions.py  log.py  ostree.py  runner.py  utils.py
ruck/cmd/: __init__.py  options.py  shell.py
ruck/plugins/: base.py  boot.py  chroot.py  debos.py  disk.py  dummy.py  mmdebstrap.py  mount.py  ostree.py  umount.py  unpack.py
tools/: kill-vm.sh  run-vm.sh
