[metadata]
name = ruck
summary = Debian Image builder
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://www.openstack.org/
python_equires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    ruck

[entry_points]
console_scripts = 
    ruck = ruck.cmd.shell:main
ruck.plugins =
    dummy = ruck.plugins.dummy:DummyPlugin
    ostree = ruck.plugins.ostree:OstreePlugin
    mmdebstrap = ruck.plugins.mmdebstrap:MmdebstrapPlugin
    disk = ruck.plugins.disk:DiskPlugin
    unpack = ruck.plugins.unpack:UnpackPlugin
